# authzee-py

./: CHANGELOG.md  README.md  TODO.md  setup.cfg
src/authzee/: __init__.py  authzee.py  authzee_async.py  backend_locality.py  core.py  exceptions.py  module_locality.py
src/authzee/compute/: __init__.py  compute_module.py  fan_out_mp_compute.py  in_process_compute.py  main_process_compute.py  multiprocess_compute.py  shared_mem_event.py  shared_mem_latch.py  taskiq_compute.py  threaded_compute.py
src/authzee/storage/: __init__.py  in_memory_storage.py  in_process_storage.py  memory_storage.py  parallel_memory_storage.py  s3_storage.py  sql_storage.py  storage_backend.py  storage_module.py
